Sun Apr 28 17:17:46 CEST 2013  John Tytgat  <John.Tytgat@aaug.net>

	src:
	* reloc.h (RelocOut): Update comments.
	* os.c (OS_GetCWD): Add.
	* os.h (OS_GetCWD): Likewise.
	* main.c (asasm_help): Add -G option explanation.
	(option_debug): Add.
	(main): Support -g option.
	* main.h (option_debug): Add.
	* output.c (shstrtab_t, DWARF_UserState_t, oDWUserStateP,
	shstrtab_add, shstrtab_finish, DWARF_Callback_CreateSection,
	DWARF_CreateAreasAndSections, DWARF_OutputSectionData, DWARF_Finish):
	Add.
	(Output_ELF): Add basic DWARF support.
	* Makefile.am (asasm_CFLAGS): Add __STDC_FORMAT_MACROS definition.
	(-pedantic): Remove.
	* area.c (Area_CreateDWARF): Add.
	* area.h (AREA_*): Make unsigned.
	(AREA_INT_DWARF): Add.
	(Area_IsDWARF, Area_CreateDWARF): Add.

Sun Apr 28 17:14:06 CEST 2013  John Tytgat  <John.Tytgat@aaug.net>

	* src/area.c (areaImage): Rename to..
	(Area_Resize): ...this.
	(Area_EnsureExtraSize): Follow areaImage rename.

Sun Apr 28 16:21:56 CEST 2013  John Tytgat  <John.Tytgat@aaug.net>

	src:
	* include.c (Include_Find): Use PATH_MAX from limits.h instead of
	MAXPATHLEN from sys/param.h or own definition.
	* output.c: Likewise.

Sun Apr 28 14:49:40 CEST 2013  John Tytgat  <John.Tytgat@aaug.net>

	src:
	* include.c (Include_Find): Drop inc parameter.
	* include.h (Include_Find): Likewise.
	* directive_file.c (c_incbin): Drop Include_Find inc parameter.
	* filestack.c (FS_PushFilePObject): Likewise.
	* eval.c (Eval_Unop): Likewise.

Tue Apr  2 22:35:47 CEST 2013  John Tytgat  <John.Tytgat@aaug.net>

	unittests/reloc:
	* src/reloc_against_other_areas.s: Add.
	* ref/reloc_against_other_areas_aof.txt: Add.
	* ref/reloc_against_other_areas_elf.txt: Add.

Tue Apr  2 20:42:27 CEST 2013  John Tytgat  <John.Tytgat@aaug.net>

	src:
	* elf.h: Remove.
	* symbol.c: Include libelf.h instead of elf.h.
	* reloc.c: Likewise.
	* reloc.h: Likewise.
	* output.c (armword): Move to output.h
	(ourword): Remove.
	(Output_Open): Add.